fixed image size and layout alignment on sm

--- a/client/src/components/Layouts/ProtectedLayout/ProtectedLayout.module.css
+++ b/client/src/components/Layouts/ProtectedLayout/ProtectedLayout.module.css
@@ -8,5 +8,6 @@
 @media screen and (max-width: 640px) {
     .container {
         grid-template-columns: auto;
+        align-items: flex-start;
     }
 }
